# constexpr-everything

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
tests/01/: CMakeLists.txt  test01.cpp
tests/02/: CMakeLists.txt  test02.cpp
